# market-research-assistant

./: README.md  pyproject.toml
src/prop_firm_ai/: fundamentals.py  macro.py  market_data.py  micro.py
